magazine-showcase new shows years

--- a/src/app/magazine-showcase/magazine-showcase.component.html
+++ b/src/app/magazine-showcase/magazine-showcase.component.html
@@ -1,1 +1,10 @@
-<p>magazine-showcase works!</p>
+<h1>
+  {{name}}
+</h1>
+<ul *ngFor="let year of years">
+  <a href="">
+    <li>
+      {{year}}
+    </li>
+  </a>
+</ul>
