--- a/src/styles.less
+++ b/src/styles.less
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font: inherit;
+    font-family: inherit;
+    font-size: 20px;
     color: inherit;
 }
 
