--- a/src/app/magazine-details/magazine-details.component.less
+++ b/src/app/magazine-details/magazine-details.component.less
@@ -1,2 +1,20 @@
+:host{
 
+  display: table-row;
+
+  td{
+    border: 1px solid whitesmoke;
+    padding: 10px;
+    height: 50px;
+    img{
+      display: block;
+    }
+    p {
+      position: relative;
+      top: -190px;
+      height: 100%;
+      width: 100%;
+    }
+  }
+}
 
