--- a/src/app/magazine-showcase/magazine-showcase.component.html
+++ b/src/app/magazine-showcase/magazine-showcase.component.html
@@ -1,8 +1,8 @@
 <h1>
   {{name}}
 </h1>
-<ul *ngFor="let year of years">
-  <a [routerLink]="'/lista/' + name + '/' +  year">
+<ul >
+  <a *ngFor="let year of years" [routerLink]="'/lista/' + name + '/' +  year">
     <li [class.isActive]="isActive(year)">
       {{year}}
     </li>
@@ -21,5 +21,6 @@
 
   <magazine-details *ngFor="let magazine of magazineCollection" [magazineData]="magazine" [magazineName]="name"></magazine-details>
 
-
 </table>
+
+<button (click)="goToHome()">Wróć</button>
