--- a/src/styles.less
+++ b/src/styles.less
@@ -1,3 +1,5 @@
+@accentcolor: rgb(59, 45, 59);
+
 *{
     margin: 0;
     padding: 0;
@@ -14,6 +16,7 @@ body{
     height: 100%;
     font-size: 20px;
     padding-top: 20px;
+    font-family: 'Martian Mono', monospace;;
 }
 
 input{
@@ -21,3 +24,10 @@ input{
     border: 2px solid white;
     border-radius: 5px;
 }
+
+a{
+  text-decoration: none;
+  color: inherit;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@300&display=swap');
