small styling + all btn script

--- a/src/app/magazine-details/magazine-details.component.less
+++ b/src/app/magazine-details/magazine-details.component.less
@@ -5,14 +5,14 @@
   td{
     border: 1px solid whitesmoke;
     padding: 10px;
-    height: 50px;
+    height: fit-content;
     img{
       display: block;
     }
     p {
       position: relative;
-      top: -190px;
-      height: 100%;
+      top: -150px;
+      height: 150px;
       width: 100%;
     }
   }
