--- a/src/app/magazine-showcase/magazine-showcase.component.less
+++ b/src/app/magazine-showcase/magazine-showcase.component.less
@@ -41,6 +41,7 @@ h1 {
     font-size: 1.2em;
     display: block;
     margin: auto;
+    margin-top: 20px;
     width: fit-content;
     padding: 0.2rem 1rem;
     background: @accentcolor;
@@ -56,7 +57,6 @@ h1 {
   table{
     border: 1px solid whitesmoke;
     margin-top: 20px;
-    margin-bottom: 20px;
     border-spacing:0;
     th{
       border: 1px solid whitesmoke;
